k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp
  namespace: todoapp
spec:
  type: NodePort
  selector:
    app: todoapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
